발주 권한 상태에 기본 CRUD로 전환 작업